--- a/config.json
+++ b/config.json
@@ -8,11 +8,13 @@
   "TCP_sleep": 0.01,
   "TLS_frag": 4,
   "FAKE_packet": "GET / HTTP/1.1\r\nHost: www.baidu.com\r\n\r\n",
-  "FAKE_ttl": 115,
+  "FAKE_ttl": "query",
   "FAKE_sleep": 0.01,
   "my_socket_timeout": 180,
+  "FAKE_ttl_auto_timeout": 2,
   "doh_server": "https://cloudflare-dns.com/dns-query?dns=",
   "DNS_log_every": 5,
+  "TTL_log_every": 1,
   "method": "TLSfrag",
   "IPtype": "ipv4",
   "domains": {
@@ -33,16 +35,22 @@
       "IP": "2.17.22.191"
     },
     "onedrive.live.com": {
+      "IP": "13.107.139.11",
       "method": "FAKEdesync",
       "TLS_frag": 0,
       "num_TLS_fragment": 0,
-      "TCP_sleep": 0.2,
-      "FAKE_ttl": 23
+      "TCP_sleep": 0.2
+    },
+    "skyapi.onedrive.live.com": {
+      "IP": "13.107.42.12",
+      "method": "FAKEdesync",
+      "TLS_frag": 0,
+      "num_TLS_fragment": 0,
+      "TCP_sleep": 0.2
     },
     "vercel.app": {
       "IP": "64.29.17.65",
       "method": "FAKEdesync",
-      "FAKE_ttl": 20,
       "FAKE_sleep": 0.01,
       "TLS_frag": 0,
       "num_TLS_fragment": 0,
