--- a/config.json
+++ b/config.json
@@ -18,6 +18,9 @@
   "method": "TLSfrag",
   "IPtype": "ipv4",
   "domains": {
+    "giscus.app": {
+        "method": "FAKEdesync"
+    },
     "bbc.com": {
       "IP": "146.75.36.81"
     },
@@ -46,7 +49,7 @@
       "method": "FAKEdesync"
     },
     "vercel.app": {
-      "IP": "64.29.17.193",
+      "IP": "64.29.17.1",
       "method": "FAKEdesync"
     },
     "cloudflare.com": {
@@ -122,7 +125,7 @@
       "port": 1445
     },
     "google.com": {
-      "IP": "35.190.247.149",
+      "IP": "35.190.247.148",
       "port": 1445
     },
     "googlevideo.com": {
@@ -149,7 +152,7 @@
       "port": 5128
     },
     "youtube.com": {
-      "IP": "35.190.247.149",
+      "IP": "35.190.247.147",
       "port": 1445
     },
     "youtu.be": {
