fix github api & stackbitz

--- a/config.json
+++ b/config.json
@@ -18,6 +18,9 @@
   "method": "TLSfrag",
   "IPtype": "ipv4",
   "domains": {
+	"stackblitz.com": {
+		"IP": "3.164.121.25"
+	},
     "giscus.app": {
         "method": "FAKEdesync"
     },
@@ -93,10 +96,15 @@
       "TCP_frag": 5
     },
     "github.com": {
-      "IP": "140.82.121.3",
+      "IP": "20.27.177.113",
       "TLS_frag": 3,
       "TCP_frag": 5
     },
+	"api.github.com": {
+		"IP": "20.27.177.116",
+		"TLS_frag": 3,
+		"TCP_frag": 5
+	},
     "github.io": {
       "IP": "151.101.21.147"
     },
