--- a/config.json
+++ b/config.json
@@ -18,6 +18,7 @@
     "method": "TLSfrag",
     "IPtype": "ipv4",
     "domains": {
+        "annas-archive.org":{},
         "stackblitz.com": {
             "IP": "3.164.121.25"
         },
@@ -48,7 +49,7 @@
             "method": "FAKEdesync"
         },
         "skyapi.onedrive.live.com": {
-				"IP": "13.107.42.12",
+            "IP": "13.107.42.12",
             "method": "FAKEdesync"
         },
         "vercel.app": {
@@ -105,6 +106,11 @@
             "TLS_frag": 3,
             "TCP_frag": 5
         },
+        "alive.github.com": {
+            "IP": "140.82.112.26",
+            "TLS_frag": 3,
+            "TCP_frag": 5
+        },
         "github.io": {
             "IP": "151.101.153.147"
         },
@@ -128,19 +134,7 @@
         "pixiv": {
             "TLS_frag": 3
         },
-		"go.dev": {
-            "TCP_frag": 2,
-			"method": "FAKEdesync"
-        },
-        "chromium.org": {
-            "IP": "35.190.247.152",
-            "port": 1445
-        },
-		"golang.org": {
-            "IP": "35.190.247.152",
-            "port": 1445
-        },
-		"chrome.com": {
+        "chrome.com": {
             "IP": "35.190.247.148",
             "port": 1445
         },
