auto pac by python

--- a/config.json
+++ b/config.json
@@ -18,10 +18,10 @@
     "method": "TLSfrag",
     "IPtype": "ipv4",
     "domains": {
-		"annas-archive.org": {},
-		"codesandbox.io": {
-			"IP": "104.21.3.227"
-		},
+        "annas-archive.org": {},
+        "codesandbox.io": {
+            "IP": "104.21.3.227"
+        },
         "stackblitz.com": {
             "IP": "13.32.27.56"
         },
@@ -63,8 +63,7 @@
             "IP": "104.21.3.226"
         },
         "cn.nytimes.com": {},
-        "nytimes.com":
-        {
+        "nytimes.com": {
             "IP": "199.232.137.164"
         },
         "purr.nytimes.com": {},
@@ -141,6 +140,10 @@
             "TLS_frag": 3
         },
         "chrome.com": {
+            "IP": "35.190.247.148",
+            "port": 1445
+        },
+        "chromium.org": {
             "IP": "35.190.247.148",
             "port": 1445
         },
@@ -297,5 +300,133 @@
             "IP": "104.21.3.222",
             "TLS_frag": 6
         }
-    }
+    },
+    "pac_domains": [
+        "sleazyfork.org",
+        "greasyfork.org",
+        "codesandbox.io",
+        "wikiquote.org",
+        "wikisource.org",
+        "indieweb.social",
+        "mov.im",
+        "stackblitz.com",
+        "bbc.co.uk",
+        "economist.com",
+        "conversations.im",
+        "611study.icu",
+        "xmpp.jp",
+        "cmx.im",
+        "cmlmuf.top",
+        "hack.chat",
+        "laborinfocn6.com",
+        "annas-archive.org",
+        "ci-ic.org",
+        "opkode.com",
+        "f-droid.org",
+        "protonvpn.com",
+        "archive.ph",
+        "lsepcn.com",
+        "patreon.com",
+        "conversejs.org",
+        "notion.site",
+        "go.dev",
+        "golang.org",
+        "chromium.org",
+        "cloudflare.com",
+        "bootstrapcdn.com",
+        "apkmirror.com",
+        "giscus.app",
+        "medium.com",
+        "suno.com",
+        "quoracdn.net",
+        "quora.com",
+        "onedrive.live.com",
+        "bbci.co.uk",
+        "bbc.com",
+        "huggingface.co",
+        "nyt.com",
+        "nytimes.com",
+        "freeflarum.com",
+        "thepiratebay.org",
+        "pornhub.com",
+        "archive.org",
+        "rutube.ru",
+        "youtu.be",
+        "pximg.net",
+        "vercel.app",
+        "nicovideo.jp",
+        "chrome.com",
+        "archive-it.org",
+        "croxy.network",
+        "proton.me",
+        "cookielaw.org",
+        "phncdn.com",
+        "docker.com",
+        "discord.gg",
+        "discordapp.com",
+        "discord.com",
+        "blogger.com",
+        "redd.it",
+        "redditmedia.com",
+        "redditstatic.com",
+        "reddit.com",
+        "receiveasmsonline.com",
+        "good.news",
+        "bsky.app",
+        "bsky.social",
+        "pscp.tv",
+        "matrix.org",
+        "pixiv.net",
+        "imgur.com",
+        "gravatar.com",
+        "twitch.tv",
+        "bit.ly",
+        "duckduckgo.com",
+        "cdn-telegram.org",
+        "githubusercontent.com",
+        "github.io",
+        "github.com",
+        "wikinews.org",
+        "wikipedia.org",
+        "wikimedia.org",
+        "instagram.com",
+        "dropbox.com",
+        "bu2021.xyz",
+        "cdninstagram.com",
+        "fbsbx.com",
+        "facebook.com",
+        "fbcdn.net",
+        "translate.goog",
+        "ggpht.com",
+        "telegram.me",
+        "t.me",
+        "v2ex.com",
+        "googleapis.com",
+        "x.com",
+        "twimg.com",
+        "twitter.com",
+        "withgoogle.com",
+        "telegram.org",
+        "youtube.com",
+        "ytimg.com",
+        "googlevideo.com",
+        "googleusercontent.com",
+        "google.com.hk",
+        "google.com",
+        "workers.dev",
+        "xcancel.com",
+        "geph.io",
+        "1lib.sk",
+        "freeweibo.com",
+        "odycdn.com",
+        "odysee.com",
+        "torproject.org",
+        "mastodon.social",
+        "freezhihu.org",
+        "z-library.sk",
+        "pages.dev",
+        "greatfire.org",
+        "gstatic.com",
+        "githubassets.com"
+    ]
 }
