--- a/config.json
+++ b/config.json
@@ -151,6 +151,10 @@
             "IP": "35.190.247.148",
             "port": 1445
         },
+        "android.com": {
+            "IP": "35.190.247.145",
+            "port": 1445
+        },
         "googlevideo.com": {
             "IPtype": "ipv6"
         },
@@ -167,12 +171,12 @@
             "port": 41620
         },
         "gstatic.com": {
-            "IP": "13.230.98.94",
-            "port": 5128
+            "IP": "35.190.247.147",
+            "port": 1445
         },
         "googleapis.com": {
-            "IP": "13.230.98.94",
-            "port": 5128
+            "IP": "35.190.247.147",
+            "port": 1445
         },
         "youtube.com": {
             "IP": "35.190.247.147",
