--- a/config.json
+++ b/config.json
@@ -17,6 +17,14 @@
     "TTL_log_every": 1,
     "method": "TLSfrag",
     "IPtype": "ipv4",
+    "IPredirect": {
+        "104.16.0.0/13": "104.21.57.162",
+        "104.24.0.0/14": "104.19.229.21",
+        "172.64.0.0/13": "172.67.164.231",
+        "162.158.0.0/15": "104.21.3.226",
+        "2606:4700::/32": "104.21.57.162",
+        "2400:cb00::/32": "104.19.229.21"        
+    },
     "domains": {
         "annas-archive.org": {},
         "codesandbox.io": {
