--- a/config.json
+++ b/config.json
@@ -155,6 +155,10 @@
             "IP": "35.190.247.148",
             "port": 1445
         },
+        ".google$": {
+            "IP": "35.190.247.150",
+            "port": 1445
+        },
         "google.com": {
             "IP": "35.190.247.148",
             "port": 1445
