--- a/config.json
+++ b/config.json
@@ -19,11 +19,11 @@
     "IPtype": "ipv4",
     "IPredirect": {
         "104.16.0.0/13": "104.21.57.162",
-        "104.24.0.0/14": "104.19.229.21",
-        "172.64.0.0/13": "104.21.3.225",
-        "162.158.0.0/15": "104.21.3.226",
-        "2606:4700::/32": "104.21.57.162",
-        "2400:cb00::/32": "104.19.229.21"        
+        "104.24.0.0/14": "^104.19.229.21",
+        "172.64.0.0/13": "^104.21.3.225",
+        "162.158.0.0/15": "^104.21.3.226",
+        "2606:4700::/32": "^104.21.57.162",
+        "2400:cb00::/32": "^104.19.229.21"
     },
     "domains": {
         "annas-archive.org": {},
@@ -159,6 +159,7 @@
             "IP": "35.190.247.150",
             "port": 1445
         },
+        "deepmind.google": {},
         "google.com": {
             "IP": "35.190.247.148",
             "port": 1445
@@ -324,131 +325,136 @@
         }
     },
     "pac_domains": [
-        "sleazyfork.org",
-        "greasyfork.org",
-        "codesandbox.io",
-        "wikiquote.org",
-        "wikisource.org",
-        "indieweb.social",
-        "mov.im",
-        "stackblitz.com",
-        "bbc.co.uk",
-        "economist.com",
-        "conversations.im",
-        "611study.icu",
-        "xmpp.jp",
-        "cmx.im",
-        "cmlmuf.top",
-        "hack.chat",
-        "laborinfocn6.com",
-        "annas-archive.org",
-        "ci-ic.org",
-        "opkode.com",
-        "f-droid.org",
-        "protonvpn.com",
-        "archive.ph",
-        "lsepcn.com",
-        "patreon.com",
-        "conversejs.org",
-        "notion.site",
-        "go.dev",
-        "golang.org",
-        "chromium.org",
-        "cloudflare.com",
-        "bootstrapcdn.com",
-        "apkmirror.com",
-        "giscus.app",
-        "medium.com",
-        "suno.com",
-        "quoracdn.net",
-        "quora.com",
-        "onedrive.live.com",
-        "bbci.co.uk",
-        "bbc.com",
-        "huggingface.co",
-        "nyt.com",
-        "nytimes.com",
-        "freeflarum.com",
-        "thepiratebay.org",
-        "pornhub.com",
-        "archive.org",
-        "rutube.ru",
-        "youtu.be",
-        "pximg.net",
-        "vercel.app",
-        "nicovideo.jp",
-        "chrome.com",
-        "archive-it.org",
-        "croxy.network",
-        "proton.me",
-        "cookielaw.org",
-        "phncdn.com",
-        "docker.com",
-        "discord.gg",
-        "discordapp.com",
-        "discord.com",
-        "blogger.com",
-        "redd.it",
-        "redditmedia.com",
-        "redditstatic.com",
-        "reddit.com",
-        "receiveasmsonline.com",
-        "good.news",
-        "bsky.app",
-        "bsky.social",
-        "pscp.tv",
-        "matrix.org",
-        "pixiv.net",
-        "imgur.com",
-        "gravatar.com",
-        "twitch.tv",
-        "bit.ly",
-        "duckduckgo.com",
-        "cdn-telegram.org",
-        "githubusercontent.com",
-        "github.io",
-        "github.com",
-        "wikinews.org",
-        "wikipedia.org",
-        "wikimedia.org",
-        "instagram.com",
-        "dropbox.com",
-        "bu2021.xyz",
-        "cdninstagram.com",
-        "fbsbx.com",
-        "facebook.com",
-        "fbcdn.net",
-        "translate.goog",
-        "ggpht.com",
-        "telegram.me",
-        "t.me",
-        "v2ex.com",
-        "googleapis.com",
-        "x.com",
-        "twimg.com",
-        "twitter.com",
-        "withgoogle.com",
-        "telegram.org",
-        "youtube.com",
-        "ytimg.com",
-        "googlevideo.com",
-        "googleusercontent.com",
-        "google.com.hk",
-        "google.com",
-        "workers.dev",
-        "xcancel.com",
-        "geph.io",
-        "1lib.sk",
-        "freeweibo.com",
-        "odycdn.com",
-        "odysee.com",
-        "torproject.org",
-        "mastodon.social",
-        "freezhihu.org",
-        "z-library.sk",
-        "pages.dev",
-        "greatfire.org",
-        "gstatic.com",
-        "githubassets.com"
+        "google$",
+        "uptodown.com$",
+        "fosstodon.org$",
+        "smsactivate.s3.eu-central-1.amazonaws.com$",
+        "android.com$",
+        "readthedocs.io$",
+        "sleazyfork.org$",
+        "greasyfork.org$",
+        "codesandbox.io$",
+        "wikiquote.org$",
+        "wikisource.org$",
+        "indieweb.social$",
+        "mov.im$",
+        "stackblitz.com$",
+        "bbc.co.uk$",
+        "economist.com$",
+        "conversations.im$",
+        "611study.icu$",
+        "xmpp.jp$",
+        "cmx.im$",
+        "cmlmuf.top$",
+        "hack.chat$",
+        "laborinfocn6.com$",
+        "annas-archive.org$",
+        "ci-ic.org$",
+        "opkode.com$",
+        "f-droid.org$",
+        "protonvpn.com$",
+        "archive.ph$",
+        "lsepcn.com$",
+        "patreon.com$",
+        "conversejs.org$",
+        "notion.site$",
+        "go.dev$",
+        "golang.org$",
+        "chromium.org$",
+        "cloudflare.com$",
+        "bootstrapcdn.com$",
+        "apkmirror.com$",
+        "giscus.app$",
+        "medium.com$",
+        "suno.com$",
+        "quoracdn.net$",
+        "quora.com$",
+        "onedrive.live.com$",
+        "bbci.co.uk$",
+        "bbc.com$",
+        "huggingface.co$",
+        "nyt.com$",
+        "nytimes.com$",
+        "freeflarum.com$",
+        "thepiratebay.org$",
+        "pornhub.com$",
+        "archive.org$",
+        "rutube.ru$",
+        "youtu.be$",
+        "pximg.net$",
+        "vercel.app$",
+        "nicovideo.jp$",
+        "chrome.com$",
+        "archive-it.org$",
+        "croxy.network$",
+        "proton.me$",
+        "cookielaw.org$",
+        "phncdn.com$",
+        "docker.com$",
+        "discord.gg$",
+        "discordapp.com$",
+        "discord.com$",
+        "blogger.com$",
+        "redd.it$",
+        "redditmedia.com$",
+        "redditstatic.com$",
+        "reddit.com$",
+        "receiveasmsonline.com$",
+        "good.news$",
+        "bsky.app$",
+        "bsky.social$",
+        "pscp.tv$",
+        "matrix.org$",
+        "pixiv.net$",
+        "imgur.com$",
+        "gravatar.com$",
+        "twitch.tv$",
+        "bit.ly$",
+        "duckduckgo.com$",
+        "cdn-telegram.org$",
+        "githubusercontent.com$",
+        "github.io$",
+        "github.com$",
+        "wikinews.org$",
+        "wikipedia.org$",
+        "wikimedia.org$",
+        "instagram.com$",
+        "dropbox.com$",
+        "bu2021.xyz$",
+        "cdninstagram.com$",
+        "fbsbx.com$",
+        "facebook.com$",
+        "fbcdn.net$",
+        "translate.goog$",
+        "ggpht.com$",
+        "telegram.me$",
+        "t.me$",
+        "v2ex.com$",
+        "googleapis.com$",
+        "x.com$",
+        "twimg.com$",
+        "twitter.com$",
+        "withgoogle.com$",
+        "telegram.org$",
+        "youtube.com$",
+        "ytimg.com$",
+        "googlevideo.com$",
+        "googleusercontent.com$",
+        "google.com.hk$",
+        "google.com$",
+        "workers.dev$",
+        "xcancel.com$",
+        "geph.io$",
+        "1lib.sk$",
+        "freeweibo.com$",
+        "odycdn.com$",
+        "odysee.com$",
+        "torproject.org$",
+        "mastodon.social$",
+        "freezhihu.org$",
+        "z-library.sk$",
+        "pages.dev$",
+        "greatfire.org$",
+        "gstatic.com$"
     ]
 }
