--- a/config.json
+++ b/config.json
@@ -332,8 +332,11 @@
         }
     },
     "pac_domains": [
-        "google$",
+        "nadeko.net$",
+        "anoxinon.de$",
         "uptodown.com$",
+        "google$",
+        "freeweibo.com$",
         "fosstodon.org$",
         "smsactivate.s3.eu-central-1.amazonaws.com$",
         "android.com$",
@@ -453,7 +456,6 @@
         "xcancel.com$",
         "geph.io$",
         "1lib.sk$",
-        "freeweibo.com$",
         "odycdn.com$",
         "odysee.com$",
         "torproject.org$",
