--- a/config.json
+++ b/config.json
@@ -26,6 +26,9 @@
         "2400:cb00::/32": "^104.19.229.21"
     },
     "domains": {
+        "inv.nadeko.net": {
+            "IP": "186.105.142.141"
+        },
         "annas-archive.org": {},
         "mastodon.social": {
             "IP": "146.75.29.91"
