--- a/config.json
+++ b/config.json
@@ -227,6 +227,10 @@
             "IP": "35.190.247.146",
             "port": 1445
         },
+        "youtube-nocookie.com": {
+            "IP": "35.190.247.146",
+            "port": 1445
+        },
         "youtu.be": {
             "IP": "35.190.247.146",
             "port": 1445
