add ai.dev and google.dev
We are still not allowed to use Gemini.

--- a/config.json
+++ b/config.json
@@ -201,6 +201,14 @@
             "IP": "35.190.247.148",
             "port": 1445
         },
+        "ai.dev": {
+            "IP": "35.190.247.145",
+            "port": 1445
+        },
+        "google.dev": {
+            "IP": "35.190.247.145",
+            "port": 1445
+        },
         "android.com": {
             "IP": "35.190.247.145",
             "port": 1445
