rewrite dns & policy parsing

--- a/config.json
+++ b/config.json
@@ -1,22 +1,20 @@
 {
-    "output_data": false,
-    "listen_PORT": 2500,
-    "DOH_PORT": 2500,
-    "num_TCP_fragment": 3,
-    "num_TLS_fragment": 2,
+    "port": 2500,
+    "num_tcp_pieces": 3,
+    "num_tls_pieces": 2,
     "TCP_frag": 4,
-    "TCP_sleep": 0.01,
+    "tcp_sleep": 0.01,
     "TLS_frag": 4,
-    "FAKE_packet": "GET / HTTP/1.1\r\nHost: www.baidu.com\r\n\r\n",
-    "FAKE_ttl": "query",
-    "FAKE_sleep": 0.1,
+    "fake_packet": "GET / HTTP/1.1\r\nHost: www.baidu.com\r\n\r\n",
+    "fake_ttl": "query",
+    "fake_sleep": 0.1,
     "my_socket_timeout": 180,
     "FAKE_ttl_auto_timeout": 2,
     "doh_server": "https://cloudflare-dns.com/dns-query",
     "DNS_log_every": 5,
     "TTL_log_every": 1,
-    "method": "TLSfrag",
-    "IPtype": "ipv4",
+    "mode": "TLSfrag",
+    "enalbe_ipv6": false,
     "IPredirect": {
         "104.16.0.0/13": "104.21.57.162",
         "104.24.0.0/14": "^104.19.229.21",
@@ -312,8 +310,8 @@
         "t.me": {
             "IP": "149.154.161.145",
             "TLS_frag": 1,
-            "num_TCP_fragment": 3,
-            "num_TLS_fragment": 5,
+            "num_tcp_pieces": 3,
+            "num_tls_pieces": 5,
             "TCP_frag": 2
         },
         "medium": {},
