--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ python = "^3.11"
 ahocorasick-python="^0.0.9"
 requests="^2.32.3"
 dnspython="^2.3.0"
+httpx = "^0.28.1"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.17.4"
