--- a/config.json
+++ b/config.json
@@ -10,7 +10,7 @@
     "my_socket_timeout": 180,
     "FAKE_ttl_auto_timeout": 2,
     "doh_server": "https://cloudflare-dns.com/dns-query",
-    "mode": "FAKEdesync",
+    "mode": "TLSfrag",
     "enalbe_ipv6": false,
     "IPredirect": {
         "104.16.0.0/13": "104.21.57.162",
