--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,8 @@ classifiers = [
 python = "^3.11"
 ahocorasick-python="^0.0.9"
 requests="^2.32.3"
-dnspython="^2.3.0"
 httpx = "^0.28.1"
+dnspython = {extras = ["doh", "doq"], version = "^2.7.0"}
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.17.4"
