--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "loglevel": "WARNING",
+    "loglevel": "INFO",
     "port": 2500,
     "num_tcp_pieces": 3,
     "num_tls_pieces": 2,
@@ -14,11 +14,11 @@
     "enalbe_ipv6": true,
     "IPredirect": {
         "104.16.0.0/13": "104.21.57.162",
-        "104.24.0.0/14": "^104.19.229.21",
+        "104.24.0.0/14": "^104.21.3.224",
         "172.64.0.0/13": "^104.21.3.225",
         "162.158.0.0/15": "^104.21.3.226",
         "2606:4700::/32": "^104.21.57.162",
-        "2400:cb00::/32": "^104.19.229.21"
+        "2400:cb00::/32": "^104.21.3.224"
     },
     "domains": {
         "streaming.mastodon.social": {},
