--- a/configt.json
+++ b/configt.json
@@ -1,30 +1,29 @@
 {
-    "loglevel": "INFO",
-    "port": 2500,
-    "DOH_port": 2500,
-    "num_tcp_pieces": 8,
-    "num_tls_pieces": 8,
-    "len_tcp_sni": 13,
-    "len_tls_sni": 5,
-    "send_interval": 0.01,
-    "fake_packet": "GET / HTTP/1.1\r\nHost: www.baidu.com\r\n\r\n",
-    "fake_ttl": "query",
-    "fake_sleep": 0.1,
+    "output_data": false,
+    "listen_PORT": 2501,
+    "DOH_PORT": 2501,
+    "num_TCP_fragment": 3,
+    "num_TLS_fragment": 2,
+    "TCP_frag": 4,
+    "TCP_sleep": 0.01,
+    "TLS_frag": 4,
+    "FAKE_packet": "GET / HTTP/1.1\r\nHost: www.baidu.com\r\n\r\n",
+    "FAKE_ttl": "query",
+    "FAKE_sleep": 0.1,
     "my_socket_timeout": 180,
     "FAKE_ttl_auto_timeout": 2,
     "doh_server": "https://cloudflare-dns.com/dns-query?dns=",
-    "mode": "TLSfrag",
-    "DNS_cache": true,
-    "DNS_cache_update_interval": 2,
-    "TTL_cache": true,
-    "TTL_cache_update_interval": 2,
+    "DNS_log_every": 5,
+    "TTL_log_every": 1,
+    "method": "TLSfrag",
+    "IPtype": "ipv4",
     "IPredirect": {
         "104.16.0.0/13": "104.21.57.162",
-        "104.24.0.0/14": "^104.21.3.224",
+        "104.24.0.0/14": "^104.19.229.21",
         "172.64.0.0/13": "^104.21.3.225",
         "162.158.0.0/15": "^104.21.3.226",
         "2606:4700::/32": "^104.21.57.162",
-        "2400:cb00::/32": "^104.21.3.224"
+        "2400:cb00::/32": "^104.19.229.21"
     },
     "domains": {
         "streaming.mastodon.social": {},
@@ -45,7 +44,7 @@
             "IP": "13.32.27.56"
         },
         "giscus.app": {
-            "mode": "FAKEdesync"
+            "method": "FAKEdesync"
         },
         "bbc.com": {
             "IP": "146.75.36.81"
@@ -61,22 +60,22 @@
         },
         "quora": {
             "IP": "104.21.3.225",
-            "len_tls_sni": 3
+            "TLS_frag": 3
         },
         "copilot.microsoft.com": {
             "IP": "2.17.22.191"
         },
         "onedrive.live.com": {
             "IP": "150.171.43.11",
-            "mode": "FAKEdesync"
+            "method": "FAKEdesync"
         },
         "skyapi.onedrive.live.com": {
             "IP": "13.107.42.12",
-            "mode": "FAKEdesync"
+            "method": "FAKEdesync"
         },
         "vercel.app": {
             "IP": "64.29.17.1",
-            "mode": "FAKEdesync"
+            "method": "FAKEdesync"
         },
         "cloudflare.com": {
             "IP": "104.21.3.226"
@@ -109,37 +108,37 @@
         },
         "reddit": {
             "IP": "146.75.37.140",
-            "len_tls_sni": 3,
-            "len_tcp_sni": 5
+            "TLS_frag": 3,
+            "TCP_frag": 5
         },
         "redd.it": {
             "IP": "146.75.37.140",
-            "len_tls_sni": 3,
-            "len_tcp_sni": 5
+            "TLS_frag": 3,
+            "TCP_frag": 5
         },
         "github.com": {
             "IP": "20.27.177.113",
-            "len_tls_sni": 3,
-            "len_tcp_sni": 5
+            "TLS_frag": 3,
+            "TCP_frag": 5
         },
         "gist.github.com": {
             "IP": "20.27.177.113",
-            "len_tls_sni": 3,
-            "len_tcp_sni": 5
+            "TLS_frag": 3,
+            "TCP_frag": 5
         },
         "api.github.com": {
             "IP": "20.27.177.116",
-            "len_tls_sni": 3,
-            "len_tcp_sni": 5
+            "TLS_frag": 3,
+            "TCP_frag": 5
         },
         "alive.github.com": {
             "IP": "140.82.112.26",
-            "len_tls_sni": 3,
-            "len_tcp_sni": 5
+            "TLS_frag": 3,
+            "TCP_frag": 5
         },
         "uploads.github.com": {
-            "len_tls_sni": 3,
-            "len_tcp_sni": 5
+            "TLS_frag": 3,
+            "TCP_frag": 5
         },
         "github.io": {
             "IP": "151.101.21.147"
@@ -187,9 +186,87 @@
             "IP": "185.15.58.224"
         },
         "pixiv": {
-            "len_tls_sni": 3
+            "TLS_frag": 3
         },
-    
+        "chrome.com": {
+            "IP": "35.190.247.148",
+            "port": 1445
+        },
+        "chromium.org": {
+            "IP": "35.190.247.148",
+            "port": 1445
+        },
+        ".google$": {
+            "IP": "35.190.247.150",
+            "port": 1445
+        },
+        "deepmind.google": {},
+        "google.com": {
+            "IP": "35.190.247.148",
+            "port": 1445
+        },
+        "ai.dev": {
+            "IP": "35.190.247.145",
+            "port": 1445
+        },
+        "google.dev": {
+            "IP": "35.190.247.145",
+            "port": 1445
+        },
+        "android.com": {
+            "IP": "35.190.247.145",
+            "port": 1445
+        },
+        "golang.org": {
+            "IP": "35.190.247.145",
+            "port": 1445
+        },
+        "blogger.com": {
+            "IP": "35.190.247.145",
+            "port": 1445
+        },
+        "googlevideo.com": {
+            "IPtype": "ipv6"
+        },
+        "googleusercontent.com": {
+            "IP": "4.193.121.119",
+            "port": 41620
+        },
+        ".translate.goog": {
+            "IP": "4.193.121.119",
+            "port": 41620
+        },
+        "ggpht.com": {
+            "IP": "4.193.121.119",
+            "port": 41620
+        },
+        "gstatic.com": {
+            "IP": "35.190.247.146",
+            "port": 1445
+        },
+        "googleapis.com": {
+            "IP": "35.190.247.146",
+            "port": 1445
+        },
+        "youtube.com": {
+            "IP": "35.190.247.146",
+            "port": 1445
+        },
+        "youtube-nocookie.com": {
+            "IP": "35.190.247.146",
+            "port": 1445
+        },
+        "youtu.be": {
+            "IP": "35.190.247.146",
+            "port": 1445
+        },
+        "kstatic.googleusercontent.com": {
+            "IP": "35.241.11.240"
+        },
+        "ytimg.com": {
+            "IP": "4.193.121.119",
+            "port": 41620
+        },
         "facebook.com": {
             "IP": "157.240.229.35",
             "TLSfrag": 3,
@@ -199,25 +276,25 @@
             "IP": "2a03:2880:f276:e8:face:b00c:0:4420"
         },
         "meta": {
-            "len_tls_sni": 2,
-            "len_tcp_sni": 3,
-            "send_interval": 0.01
+            "TLS_frag": 2,
+            "TCP_frag": 3,
+            "TCP_sleep": 0.01
         },
         "static.cdninstagram.com": {
             "IP": "2a03:2880:f276:d2:face:b00c:0:43fe"
         },
         "static.xx.fbcdn.net": {
             "IP": "157.240.229.35",
-            "len_tls_sni": 3,
-            "len_tcp_sni": 5
+            "TLS_frag": 3,
+            "TCP_frag": 5
         },
         "fbcdn.net": {
             "IPtype": "ipv6"
         },
         "fbsbx.com": {
             "IP": "2a03:2880:f115:83:face:b00c:0:25de",
-            "len_tls_sni": 3,
-            "len_tcp_sni": 5
+            "TLS_frag": 3,
+            "TCP_frag": 5
         },
         "dropbox.com": {
             "IP": "162.125.2.18"
@@ -234,10 +311,10 @@
         },
         "t.me": {
             "IP": "149.154.161.145",
-            "len_tls_sni": 1,
-            "num_tcp_pieces": 3,
-            "num_tls_pieces": 5,
-            "len_tcp_sni": 2
+            "TLS_frag": 1,
+            "num_TCP_fragment": 3,
+            "num_TLS_fragment": 5,
+            "TCP_frag": 2
         },
         "medium": {},
         "cdn-telegram.org": {
@@ -263,43 +340,43 @@
         },
         "video.twimg.com": {
             "CDN": "Fastly: 2024/11/13: 151.101.40.158",
-            "len_tcp_sni": 8,
+            "TCP_frag": 8,
             "IPcache": false
         },
         "twimg.com": {
             "IP": "146.75.72.157",
-            "len_tls_sni": 4
+            "TLS_frag": 4
         },
         "x.com": {
             "IP": "104.18.38.25",
-            "len_tcp_sni": 5,
-            "send_interval": 0.02,
-            "len_tls_sni": 2
+            "TCP_frag": 5,
+            "TCP_sleep": 0.02,
+            "TLS_frag": 2
         },
         "platform.twitter.com": {
             "IP": "146.75.120.157",
-            "len_tls_sni": 4
+            "TLS_frag": 4
         },
         "twitter.com": {
             "IP": "104.18.38.25",
-            "len_tls_sni": 4
+            "TLS_frag": 4
         },
         "video.pscp.tv": {
             "IP": "146.75.34.164",
-            "len_tls_sni": 9,
+            "TLS_frag": 9,
             "IPcache": false
         },
         "one.one.one.one": {
             "IP": "104.21.3.221",
-            "len_tls_sni": 4
+            "TLS_frag": 4
         },
         "nav-edge.smartscreen.microsoft.com": {
             "IP": "0.0.0.0",
-            "len_tls_sni": 4
+            "TLS_frag": 4
         },
         "cloudflare-dns.com": {
             "IP": "104.21.3.222",
-            "len_tls_sni": 6
+            "TLS_frag": 6
         },
         "tracking.miui.com": {
             "method": "GFWlike"
