--- a/.github/workflows/android_buildozer.yml
+++ b/.github/workflows/android_buildozer.yml
@@ -2,6 +2,9 @@ name: Android Build
 on:
   push:
     branches: [ main ]
+    paths:
+      - 'src/tls_fragment'
+      - 'main.py'
   workflow_dispatch:
 
 jobs:
