--- a/config.json
+++ b/config.json
@@ -144,6 +144,11 @@
             "len_tls_sni": 3,
             "len_tcp_sni": 5
         },
+        "codeload.github.com": {
+            "IP": "4.237.22.35",
+            "len_tls_sni": 3,
+            "len_tcp_sni": 5
+        },
         "uploads.github.com": {
             "IP": "4.237.22.36",
             "len_tls_sni": 3,
