--- a/config.json
+++ b/config.json
@@ -88,6 +88,11 @@
             "mode": "FAKEdesync"
         },
         "vercel.app": {
+            "IP": "18.162.37.140",
+            "mode": "FAKEdesync"
+        },
+        "kards.com": {
+            "IP": "18.162.37.140",
             "mode": "FAKEdesync"
         },
         "cloudflare.com": {
@@ -223,6 +228,11 @@
             "safety_check": true
         },
         "deepmind.google": {},
+        "goo.gl": {
+            "IP": "35.190.247.150",
+            "port": 1445,
+            "safety_check": true
+        },
         "google.com": {
             "IP": "35.190.247.145",
             "port": 1445,
