--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "loglevel": "INFO",
+    "logfile": "log.txt",
     "port": 2500,
     "DOH_port": 2500,
     "num_tcp_pieces": 8,
@@ -40,9 +41,6 @@
         },
         "yandex.com": {
             "mode": "FAKEdesync"
-        },
-        "inv.nadeko.net": {
-            "IP": "186.105.142.141"
         },
         "annas-archive.org": {},
         "mastodon.social": {
