--- a/config.json
+++ b/config.json
@@ -273,16 +273,19 @@
             "IPtype": "ipv6"
         },
         "googleusercontent.com": {
-            "IP": "4.193.121.119",
-            "port": 41620
+            "IP": "35.190.247.150",
+            "port": 1445,
+            "safety_check": true
         },
         ".translate.goog": {
-            "IP": "4.193.121.119",
-            "port": 41620
+            "IP": "35.190.247.150",
+            "port": 1445,
+            "safety_check": true
         },
         "ggpht.com": {
-            "IP": "4.193.121.119",
-            "port": 41620
+            "IP": "35.190.247.150",
+            "port": 1445,
+            "safety_check": true
         },
         "gstatic.com": {
             "IP": "35.190.247.150",
