Update config field from `method` to `mode` for some domains

--- a/config.json
+++ b/config.json
@@ -436,10 +436,10 @@
             "len_tls_sni": 6
         },
         "tracking.miui.com": {
-            "method": "GFWlike"
+            "mode": "GFWlike"
         },
         "bilibili.com": {
-            "method": "DIRECT"
+            "mode": "DIRECT"
         }
     },
     "pac_domains": [
