--- a/config.json
+++ b/config.json
@@ -22,14 +22,28 @@
     "safety_check": false,
     "UDPfakeDNS": true,
     "BySNIfirst": false,
-    "IPredirect": {
-        "104.16.0.0/13": "104.21.57.162",
-        "104.24.0.0/14": "^104.21.3.224",
-        "172.64.0.0/13": "^104.21.3.225",
-        "162.158.0.0/15": "^104.21.3.226",
-        "2606:4700::/32": "^104.21.57.162",
-        "2400:cb00::/32": "^104.21.3.224",
-        "188.114.96.0/20": "104.18.3.226"
+    "IP": {
+        "104.16.0.0/13": {
+            "redirect": "104.21.57.162"
+        },
+        "104.24.0.0/14": {
+            "redirect": "^104.21.3.224"
+        },
+        "172.64.0.0/13": {
+            "redirect": "^104.21.3.225"
+        },
+        "162.158.0.0/15": {
+            "redirect": "^104.21.3.226"
+        },
+        "2606:4700::/32": {
+            "redirect": "^104.21.57.162"
+        },
+        "2400:cb00::/32": {
+            "redirect": "^104.21.3.224"
+        },
+        "188.114.96.0/20": {
+            "redirect": "104.18.3.226"
+        }
     },
     "domains": {
         "streaming.mastodon.social": {},
@@ -174,6 +188,9 @@
         },
         "github.io": {
             "IP": "146.75.48.133"
+        },
+        "pypi.org": {
+            "IP": "146.75.48.223"
         },
         "githubusercontent.com": {
             "IP": "146.75.48.133"
