--- a/config.json
+++ b/config.json
@@ -43,6 +43,15 @@
         },
         "188.114.96.0/20": {
             "redirect": "104.18.3.226"
+        },
+        "151.101.0.0/16": {
+            "redirect": "146.75.48.0/22"
+        },
+        "146.75.0.0/16": {
+            "redirect": "146.75.48.0/22"
+        },
+        "199.232.0.0/16": {
+            "redirect": "146.75.48.0/22"
         }
     },
     "domains": {
@@ -59,20 +68,11 @@
             "modesafe": "FAKEdesync"
         },
         "annas-archive.org": {},
-        "mastodon.social": {
-            "IP": "146.75.49.91"
-        },
-        "fosstodon.social": {
-            "IP": "146.75.51.52"
-        },
         "codesandbox.io": {
             "IP": "104.21.3.227"
         },
         "stackblitz.com": {
             "IP": "13.32.27.56"
-        },
-        "bbc.com": {
-            "IP": "146.75.48.81"
         },
         "steampowered.com": {
             "IP": "23.202.181.157"
@@ -188,9 +188,6 @@
         },
         "github.io": {
             "IP": "146.75.48.133"
-        },
-        "pypi.org": {
-            "IP": "146.75.48.223"
         },
         "githubusercontent.com": {
             "IP": "146.75.48.133"
