--- a/config.json
+++ b/config.json
@@ -52,6 +52,12 @@
         },
         "199.232.0.0/16": {
             "redirect": "146.75.48.0/22"
+        },
+        "(76.223.126.88|216.150.1.0/24|216.150.16.0/24|216.198.79.0/24|216.230.84.0/24|216.230.86.0/24|64.29.17.0/24|76.76.21.0/24|66.33.60.0/24|198.169.1.0/24|198.169.2.0/24|64.239.109.0/24|64.239.123.0/24|64.125.81.216/29)": {
+            "redirect": "18.162.37.140"
+        },
+        "18.162.37.140": {
+            "mode": "FAKEdesync"
         }
     },
     "domains": {
@@ -105,9 +111,8 @@
         "bing.com": {
             "mode": "DIRECT"
         },
-        "(giscus.app|vercel.app|kards.com)": {
-            "IP": "18.162.37.140",
-            "mode": "FAKEdesync"
+        "(kards.com|giscus.app)": {
+            "IP": "18.162.37.140"
         },
         "cloudflare.com": {
             "IP": "104.21.3.226"
