--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
     "len_tls_sni": 3,
     "send_interval": 0.01,
     "fake_packet": "GET / HTTP/1.1\r\nHost: www.baidu.com\r\n\r\n",
-    "fake_ttl": "query",
+    "fake_ttl": "q0-1;3=3;5-1;8-2;13-3;20=18",
     "fake_sleep": 0.2,
     "my_socket_timeout": 120,
     "FAKE_ttl_auto_timeout": 5,
