--- a/config.json
+++ b/config.json
@@ -2,26 +2,28 @@
     "loglevel": "INFO",
     "port": 2500,
     "DOH_port": 2500,
-    "num_tcp_pieces": 8,
-    "num_tls_pieces": 8,
-    "len_tcp_sni": 4,
-    "len_tls_sni": 3,
-    "send_interval": 0.01,
-    "fake_packet": "GET / HTTP/1.1\r\nHost: www.baidu.com\r\n\r\n",
-    "fake_ttl": "q0-1;3=3;5-1;8-2;13-3;20=18",
-    "fake_sleep": 0.2,
     "my_socket_timeout": 120,
     "FAKE_ttl_auto_timeout": 5,
     "doh_server": "https://cloudflare-dns.com/dns-query?dns=",
-    "mode": "TLSfrag",
-    "DNS_cache": true,
     "DNS_cache_update_interval": 2,
-    "DNS_cache_TTL": 259200,
-    "TTL_cache": true,
     "TTL_cache_update_interval": 2,
-    "safety_check": false,
     "UDPfakeDNS": true,
     "BySNIfirst": false,
+    "default_policy": {
+        "mode": "TLSfrag",
+        "num_tcp_pieces": 8,
+        "num_tls_pieces": 8,
+        "len_tcp_sni": 4,
+        "len_tls_sni": 3,
+        "send_interval": 0.01,
+        "fake_packet": "GET / HTTP/1.1\r\nHost: www.baidu.com\r\n\r\n",
+        "fake_ttl": "q0-1;3=3;5-1;8-2;13-3;20=18",
+        "fake_sleep": 0.2,
+        "DNS_cache": true,
+        "DNS_cache_TTL": 259200,
+        "TTL_cache": true,
+        "safety_check": false
+    },
     "IPs": {
         "104.16.0.0/13": {
             "redirect": "104.21.57.162"
@@ -48,7 +50,7 @@
             "redirect": "146.75.48.0/22"
         },
         "146.75.0.0/16": {
-            "redirect": "146.75.48.0/22"
+            "redirect": "146.75.20.0/22"
         },
         "199.232.0.0/16": {
             "redirect": "146.75.48.0/22"
