--- a/config.json
+++ b/config.json
@@ -27,31 +27,16 @@
         "safety_check": true
     },
     "IPs": {
-        "104.16.0.0/13": {
-            "redirect": "104.21.57.162",
-            "CDN": "CloudFlare"
-        },
-        "104.24.0.0/14": {
-            "redirect": "^104.21.3.224"
-        },
-        "172.64.0.0/13": {
-            "redirect": "^104.21.3.225",
-            "CDN": "CloudFlare"
-        },
-        "162.158.0.0/15": {
-            "redirect": "^104.21.3.222",
-            "CDN": "CloudFlare"
-        },
-        "2606:4700::/32": {
-            "redirect": "^104.21.57.162",
+        "(104.16.0.0/13|104.24.0.0/14|172.64.0.0/13|162.158.0.0/15|2606:4700::/32|2400:cb00::/32|2400:cb00::/32)": {
+            "redirect": "^104.18.126.145",
             "CDN": "CloudFlare"
         },
         "2400:cb00::/32": {
-            "redirect": "^104.21.3.224",
+            "redirect": "^1^104.19.142.224/30",
             "CDN": "CloudFlare"
         },
         "(188.114.96.0/20|66.235.200.0/24)": {
-            "redirect": "104.18.3.223",
+            "redirect": "^104.19.142.228/30",
             "CDN": "CloudFlare"
         },
         "(151.101.0.0/16|146.75.0.0/16|199.232.0.0/16)": {
@@ -74,6 +59,9 @@
         }
     },
     "domains": {
+        "pximg.net": {
+            "IP": "104.21.3.221"
+        },
         "streaming.mastodon.social": {},
         "smsactivate.s3.eu-central-1.amazonaws.com": {
             "IP": "3.5.137.138"
@@ -313,7 +301,7 @@
             "IP": "104.21.3.222",
             "len_tls_sni": 6
         },
-        "tracking.miui.com": {
+        "miui.com": {
             "mode": "GFWlike"
         },
         "bilibili.com": {
